# FlashCardTopic

./: Bertopic_pipeline.ipynb  clean_data.ipynb  rozhodovacka_treemap_graf.html  topics_data.json
dashboard/: Dockerfile  app.py  pyproject.toml  questions_cleaned_filtered.csv  rs_filtered.pickle  shared.py
